--- a/public/index.html
+++ b/public/index.html
@@ -50,12 +50,17 @@
     <!-- CodeMirror Editor -->
      <h3>// draw כאן נכתוב את הקוד שלפני הפונקציה הראשית </h3>
     <textarea id="editor1">// Type JavaScript code here and click Run</textarea>
-    <br>
+
     <h3>// draw כאן נכתוב את הקוד שבתוך הפונקציה  </h3>
     <h2>function draw(){ </h2>
     <textarea id="editor2">// Type JavaScript code here and click Run</textarea>
     <h2>}</h2>
-    <br>
+
+    <!-- commands list -->
+     <ul id="commands">
+
+     </ul>
+
 
     <!-- Run Button -->
     <button onclick="runCode()">Run Code</button>
