--- a/public/index.html
+++ b/public/index.html
@@ -45,25 +45,35 @@
 
 <body>
 
-    <h2>CodeMirror with Run Button</h2>
+    <h1> תרגול תכנות p5</h1>
 
     <!-- CodeMirror Editor -->
-     <h3>// draw כאן נכתוב את הקוד שלפני הפונקציה הראשית </h3>
+    <h3>// draw כאן נכתוב את הקוד שלפני הפונקציה הראשית </h3>
     <textarea id="editor1">// Type JavaScript code here and click Run</textarea>
 
-    <h3>// draw כאן נכתוב את הקוד שבתוך הפונקציה  </h3>
+    <h3>// draw כאן נכתוב את הקוד שבתוך הפונקציה </h3>
     <h2>function draw(){ </h2>
     <textarea id="editor2">// Type JavaScript code here and click Run</textarea>
     <h2>}</h2>
 
-    <!-- commands list -->
-     <ul id="commands">
 
-     </ul>
+
+    <!-- commands list -->
+    <ul id="commands">
+
+    </ul>
 
 
     <!-- Run Button -->
-    <button onclick="runCode()">Run Code</button>
+    <button onclick="runCode()">הפעל קוד</button>
+
+
+    <div id="output-canvas">
+
+    </div>
+
+
+
 
     <!-- Output Display -->
     <h3>Output:</h3>
